src/test/deca/syntax/valid/self/filename.deca
// Description:
//    tests de programme correct lexicalement
//
// Resultats:
//    Bonne lecture de fichier
//
// Historique:
//    cree le 01/01/2022


#include "calcul.deca"
